--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap"
     rel="stylesheet">
-  <title>mundoLara</title>
+  <title>Lara Gansa Salvaje</title>
 </head>
 
 <body>
