--- a/web/index.html
+++ b/web/index.html
@@ -9,12 +9,14 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap"
     rel="stylesheet">
-  <title>Lara Gansa Salvaje</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.1.0/dist/cookieconsent.css">
+    <title>Lara Gansa Salvaje</title>
+  </head>
+  
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/utils/cookieconsent-config.js"></script>
 </body>
 
 </html>
